<resources>
    <string name="app_name">Android Generic App</string>

    <string name="hello_world">Hello world!</string>
    <string name="generic_app">My Generic App</string>
    <string name="activity_sqlite">SQLite</string>
    <string name="button_button">Button</string>
    <string name="button_add_item">Add item</string>
    <string name="button_list_items">List items</string>
    <string name="button_edit_item">Edit item</string>
    <string name="button_camera">Camera</string>
    <string name="button_links">Links</string>
    <string name="button_about">About</string>
    <string name="button_share">Share</string>
    <string name="button_web">Web</string>
    <string name="button_round">Round</string>
    <string name="button_sqlite">SQLite</string>
    <string name="button_prefs">Prefs</string>
    <string name="button_rectangular">Rectangular</string>
    <string name="button_sqlite_show_all">Show all</string>
    <string name="button_sqlite_add_item">Add item</string>
    <string name="button_sqlite_delete_all">Delete all</string>
    <string name="action_settings">Settings</string>
    <string name="status">Status...</string>
    <string name="editHint">Edit me...</string>
    <string name="title_activity_editor">EditorActivity</string>
    <string name="pageHome">Home</string>
    <string name="pageAddItem">Add Item</string>
    <string name="activityEditItem">Edit Item</string>
    <string name="enterTitle">Enter title...</string>
    <string name="enterContent">Enter content...</string>
    <string name="pref1">Preference 1</string>
    <string name="pref1_summ">This is preference 1</string>
    <string name="pref2">Preference 2</string>
    <string name="pref2_summ">This is preference 2</string>
    <string name="alert_dialog_ok">Yes</string>
    <string name="alert_dialog_cancel">No</string>
</resources>
