<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    >

    <TextView
        android:text="@string/pageAddItem"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/top_bar_height"
        android:textSize="36sp"
        android:gravity="center"
        android:background="@color/appPage"
        />

    <EditText
        android:hint="@string/enterTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="27sp"
        android:layout_weight="1"
        android:gravity="top"
        android:padding="10dp"
        android:background="@color/appEdit"


        android:maxLines="1" />

    <EditText
        android:hint="@string/enterContent"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="27sp"
        android:layout_weight="8"
        android:gravity="top"
        android:padding="10dp"
        android:background="@color/verylightblue"
        />


    <TextView
        android:id="@+id/status"
        android:text="@string/status"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/bottom_bar_height"
        android:textSize="18sp"
        android:gravity="center"
        android:background="@color/appStatus"
        />


</LinearLayout>