<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    >

    <TextView
        android:text="@string/activity_sqlite"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/top_bar_height"
        android:textSize="36sp"

        android:gravity="center"
        android:background="@color/appPage"
        />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:gravity="center"
        android:layout_weight="1"
        >

        <TableRow>

            <Button android:id="@+id/button_sqlite_show_all"
                android:layout_width="@dimen/main_button_width"
                android:layout_height="wrap_content"
                android:text="@string/button_sqlite_show_all"
                android:textAllCaps="false"
                />
        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/status"
        android:text="@string/status"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/bottom_bar_height"
        android:textSize="18sp"
        android:gravity="center"
        android:background="@color/appStatus"
        />

</LinearLayout>
